<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.UploadActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:weightSum="3"
                android:background="@drawable/x_box_outline"
                android:backgroundTint="@color/yellowish"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/x_box_outline">
                    <ImageButton
                        android:id="@+id/btnCamera"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/yellowish"
                        android:src="@drawable/ic_camera" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/x_box_outline">

                    <ImageButton
                        android:id="@+id/btnGallery"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/yellowish"
                        android:src="@drawable/ic_gallery"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/x_box_outline">

                    <ImageButton
                        android:id="@+id/btnLocation"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/yellowish"
                        android:src="@drawable/ic_location"/>
                </LinearLayout>

            </LinearLayout>


            <ImageView
                android:id="@+id/imgPreview"
                android:src="@drawable/ic_thumbnail_2"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="275dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/x_box_outline">

                <EditText
                    android:id="@+id/edStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hint_status"
                    android:inputType="textMultiLine"
                    android:textColor="@color/darkoliveish"
                    android:layout_marginBottom="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/x_box_outline"
                    android:layout_marginBottom="5dp"></LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edRoadName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/darkoliveish"
                            android:ems="10"
                            android:hint="@string/road_name" />

                        <EditText
                            android:id="@+id/edSubAdminArea"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/darkoliveish"
                            android:ems="10"
                            android:hint="@string/sub_admin_area"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edAdminArea"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/darkoliveish"
                            android:ems="10"
                            android:hint="@string/admin_area" />

                        <EditText
                            android:id="@+id/edCountry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/darkoliveish"
                            android:ems="10"
                            android:hint="@string/Country" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/x_box_outline"
                    android:layout_marginBottom="5dp"></LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spnIssues"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3" />

                    <Button
                        android:id="@+id/btnShare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/yellowish"
                        android:textColor="@color/darkoliveish"
                        android:text="Post"
                        android:textAlignment="center"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>

<!--<LinearLayout-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="match_parent"-->
<!--android:orientation="horizontal">-->

<!--<ImageButton-->
    <!--android:id="@+id/btnCamera"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="0"-->
    <!--android:src="@drawable/ic_camera" />-->

<!--<ImageButton-->
    <!--android:id="@+id/btnGallery"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="0"-->
    <!--android:src="@drawable/ic_gallery" />-->

<!--<ImageButton-->
    <!--android:id="@+id/btnLocation"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="0"-->
    <!--android:src="@drawable/ic_location" />-->
<!--</LinearLayout>-->